fix issue with specific image not showing up

--- a/public/index.css
+++ b/public/index.css
@@ -1,7 +1,3 @@
 .height-100 {
     height: 100%;
 }
-
-html, body {
-    height: 100%;
-}
