--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@ body {
   overflow-x: hidden;
   background-color: #e0eaf9;
 }
+
+html {
+  height: 100%;
+}
